# gpubox

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/: pci_ids.toml  quirks.toml
docs/: _config.yml  index.md
docs/blog/: 2026-07-15-introducing-gpubox.md
src/: cache.rs  cli.rs  container.rs  device.rs  doctor.rs  generate.rs  launch.rs  lib.rs  main.rs  mounts.rs  stack.rs
src/backend/: linux.rs  macos.rs  mod.rs  windows.rs  windows_container.rs
src/probe/: linux.rs  macos.rs  mod.rs  pciids.rs  windows.rs
tests/: cli_persistence.rs  golden_generate.rs  schema_validation.rs
